# luck

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
.cache/clangd/index/: commands.cpp.3C95C0DD420C8ADA.idx  commands.hpp.1F3AC7F8924ADEF1.idx  main.cpp.0AD4F3CD16447839.idx  parser.cpp.59FE7F5FCC039A16.idx  parser.hpp.01F21FFEFB2B7780.idx
utils/: commands.cpp  commands.hpp  parser.cpp  parser.hpp
